# openapi/api.yaml
@@ -1866,8 +1866,12 @@ components:
           items:
             type: string
           type: array
+        notebookId:
+          type: string
         persist:
           type: boolean
+        userId:
+          type: string
       required:
       - cellIds
       - codes
@@ -1875,6 +1879,8 @@ components:
       - configs
       - filename
       - persist
+      - userId
+      - notebookId
       type: object
     SaveUserConfigurationRequest:
       properties:
@@ -2152,7 +2158,7 @@ components:
       type: object
 info:
   title: marimo API
-  version: 0.11.7
+  version: 0.10.17
 openapi: 3.1.0
 paths:
   /@file/{filename_and_length}:
